syntax = 'proto3';

package com.cdz.proto;

option java_package = 'com.cdz.proto';
option java_outer_classname = 'StudentProto';
option java_multiple_files = true;

service StudentService{

  rpc  GetRealName(MyRequest) returns (MyResponse) {};

  rpc  GetStudentListByAge(StudentRequest) returns (stream StudentResponse) {};

  rpc  GetStudentByAgeList(stream StudentRequest) returns (StudentResponse) {};

  rpc  GetStudentListByAgeList(stream StudentRequest) returns (stream StudentResponse) {};
}

message MyRequest {
  string username=1;
}

message MyResponse{
  string realname=2;
}

message StudentRequest{
  int32 age =1;
}

message StudentResponse{
  string name =1;
  string address = 2;
  int32 age =3;
}

message StudentRequestList{
  repeated StudentRequest ageList = 1;
}

message StudentResponseList{
  repeated StudentResponse studentList = 1;
}